# chiquito

./: .gitignore  CLAUDE.md  README.md  benchmark.py  pyproject.toml
docs/: 01-the-problem.md  02-architecture.md  03-layer-splitting.md  04-ram-preloading.md  05-forward-pass.md  06-extending.md  06-quantization.md  README.md
resources/: benchmarks.json
resources/charts/: data-flow.mermaid
src/chiquito/: __init__.py  auto_model.py  composite_model.py  lazy_experts.py  model.py  splitter.py  utils.py
tests/: test_auto_model.py  test_composite_model.py  test_lazy_experts.py  test_model.py  test_splitter.py  test_utils.py
tutorial/: 01-the-problem.md  02-pytorch-foundations.md  03-huggingface-models.md  04-transformer-architecture.md  05-checkpoint-splitting.md  06-forward-pass.md  07-kv-cache-and-generation.md  08-memory-management.md  09-ram-preloading.md  10-quantization.md  11-extensibility.md  12-moe-models.md  12-putting-it-together.md  13-putting-it-together.md  README.md
