[project]
name = "chiquito"
version = "0.1.0"
description = "Layer-by-layer LLM inference with RAM preloading"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "transformers>=4.36",
    "accelerate>=0.25",
    "safetensors>=0.4",
    "huggingface-hub>=0.20",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chiquito"]
